✨ feat: adicionado tailwind

--- a/index.html
+++ b/index.html
@@ -3,28 +3,41 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<title>Pomodoro</title>
 
-		<link rel="stylesheet" href="css/style.css" />
-		<script src="js/script.js" defer /></script>
+		<link rel="stylesheet" href="./assets/css/style.css" />
+		<script src="./assets/js/script.js" defer /></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <style type="text/tailwindcss">
+      @layer utilities {
+        .content-auto {
+          content-visibility: auto;
+        }
+      }
+    </style>
 	</head>
-	<body>
-    <div>
+	<body class="bg-[#E7626C] text-[#F4EDDB]">
+    <header>
+      <img src="./assets/image/logo.svg" alt="Pomodoro" />
+    </header>
+    <main>
       <section>
         <section>
           <div>
-            <button class="modality active-button" type="button">Pomodoro</button>
-            <button class="modality" type="button">Intervalo Curto</button>
-            <button class="modality" type="button">Intervalo Longo</button>
+            <button onclick="selectTimer('pomodoro')" id="pomodoro" class="modality active-button" type="button">Pomodoro</button>
+            <button onclick="selectTimer('short-break')" id="short-break" class="modality" type="button">Intervalo Curto</button>
+            <button onclick="selectTimer('long-break')" id="long-break" class="modality" type="button">Intervalo Longo</button>
           </div>
           <div>
-            <p id="counter">25:00</p>
+            <p id="counter" class="font-extrabold text-">25:00</p>
           </div>
           <div>
-            <button id="start" class="start" type="button">Começar</button>
+            <button onclick="startTimer(selectedTimer)" id="start" class="start" type="button">Começar</button>
           </div>
         </section>
       </section>
-    </div>
+    </main>
   </body>
 </html>
